--- a/todo.html
+++ b/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple To-Do List</title>
+  <title>Simple To-Do List by manan </title>
   <style>
     body {
       background: #f0f4f8;
@@ -101,3 +101,4 @@
 
 </body>
 </html>
+
