Update in Featured Cars Section

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     transform: scale(1.05) rotate(1.2deg);
   }
 
-  /* Featured Cars Section */
+  /* Featured Cars Section (thoda phota baki) */ 
   section.featured-cars {
     margin: 60px 0 80px;
     color: #eee;
